--- a/src/style.css
+++ b/src/style.css
@@ -12,11 +12,13 @@
 body{
     margin: 0;
     background: linear-gradient(to right, #6c1c42, #ad97c8);
+    text-align: center;
 }
+
 
 .calculator-grid{
     display: grid;
-    margin-top: 2rem;
+    margin-top: 5rem;
     grid-template-columns: repeat(4,6rem);
     grid-template-rows: minmax(7rem, auto) repeat(5, 6rem);
     justify-content: center;
