--- a/src/style.css
+++ b/src/style.css
@@ -15,12 +15,17 @@ body{
     text-align: center;
 }
 
+.container {
+    margin-top: 10vh;
+    padding: 1rem;
+}
+
 
 .calculator-grid{
     display: grid;
-    margin-top: 5rem;
-    grid-template-columns: repeat(4,6rem);
-    grid-template-rows: minmax(7rem, auto) repeat(5, 6rem);
+    /* margin-top: 5rem; */
+    grid-template-columns: repeat(4,4rem);
+    grid-template-rows: minmax(7rem, auto) repeat(5, 4rem);
     justify-content: center;
 }
 
